fix on mobile

--- a/game.css
+++ b/game.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 .game-wrapper {
   width: 100%;
   height: 100%;
@@ -77,4 +81,8 @@
   font-size: 1.8em;
   /* hack */
   padding-top: 20px;
+}
+
+.blurb {
+  font-size: 3em;
 }
